# Hukan

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
examples/: Example.cpp
include/: stb_image.hpp
res/: build.bat  frag.spv  shader.frag  shader.vert
src/: CMakeLists.txt
src/Hukan/: Hukan.cpp  Hukan.hpp  hkpch.cpp  hkpch.hpp
src/Hukan/api/: Build.hpp  Logger.cpp  Logger.hpp  Platform.cpp  Platform.hpp  Terminal.hpp
src/Hukan/api/Posix/: PlatformPosix.cpp  TerminalPosix.cpp  TerminalPosix.hpp
src/Hukan/api/Win32/: PlatformWin32.cpp  TerminalWin32.cpp  TerminalWin32.hpp
src/Hukan/core/: Assert.cpp  Assert.hpp  Buffer.cpp  Buffer.hpp  Build.hpp  Core.cpp  Core.hpp  Device.cpp  Device.hpp  Extension.cpp  Extension.hpp  Instance.cpp  Instance.hpp  Layer.cpp  Layer.hpp  Messenger.cpp  Messenger.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp
src/Hukan/graphics/Surface/: Surface.cpp  Surface.hpp
src/Hukan/graphics/Surface/Posix/: SurfacePosix.cpp  SurfacePosix.hpp
src/Hukan/graphics/Surface/Win32/: SurfaceWin32.cpp  SurfaceWin32.hpp
src/Hukan/graphics/Window/: Window.cpp  Window.hpp
src/Hukan/graphics/Window/Posix/: WindowPosix.cpp  WindowPosix.hpp
src/Hukan/graphics/Window/Win32/: WindowWin32.cpp  WindowWin32.hpp
src/Hukan/utils/: Clock.cpp  Clock.hpp  Mat4x4.hpp  Types.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
